--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,17 @@
             android:layout_margin="8dp"
             android:text="Request Token" />
 
+        <android.widget.Button
+            android:id="@+id/spotify_login_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="#8BC34A"
+            android:fontFamily="@font/sen_bold"
+            android:text="Log In To Spotify"
+            android:textColor="#FAFAFA"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/code_text_view"
             android:layout_width="match_parent"
@@ -46,6 +57,17 @@
             android:layout_height="wrap_content"
             android:textSize="10sp"
             tools:text="Line 1\nLine 2\nLine 3" />
+
+        <android.widget.Button
+            android:id="@+id/generate_summary_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="#FF9800"
+            android:fontFamily="@font/sen_bold"
+            android:text="Generate Your Summary"
+            android:textColor="#FAFAFA"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
