--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,67 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#BFA8E8"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/spotify_wrapped_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/sen_bold"
+        android:text="@string/spotify_wrapped"
+        android:textColor="#FDFDFD"
+        android:textSize="90sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/spotify_login_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.111" />
+
+    <android.widget.Button
+        android:id="@+id/spotify_login_btn"
+        android:layout_width="257dp"
+        android:layout_height="108dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/sen_bold"
+        android:padding="30dp"
+        android:text="@string/log_in_to_spotify"
+        android:textColor="#FAFAFA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/generate_summary_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.widget.Button
+        android:id="@+id/generate_summary_btn"
+        android:layout_width="238dp"
+        android:layout_height="119dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="#FF9800"
+        android:fontFamily="@font/sen_bold"
+        android:padding="30dp"
+        android:text="@string/generate_summary"
+        android:textColor="#FAFAFA"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spotify_login_btn"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <!--LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:background="#BFA8E8"
+        android:orientation="vertical"-->
+        <!--
         <TextView
             android:id="@+id/token_text_view"
             android:layout_width="match_parent"
@@ -24,52 +78,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="Request Token" />
+            android:text="Request Token" /> -->
 
-        <android.widget.Button
-            android:id="@+id/spotify_login_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="#8BC34A"
-            android:fontFamily="@font/sen_bold"
-            android:text="Log In To Spotify"
-            android:textColor="#FAFAFA"
-            android:textStyle="bold" />
-
-        <TextView
+        <!--TextView
             android:id="@+id/code_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            tools:text="Code:" />
+            tools:text="Code:" /-->
 
-        <Button
+        <!--Button
             android:id="@+id/code_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="Request Code" />
+            android:text="Request Code" /-->
 
-        <TextView
+        <!--TextView
             android:id="@+id/response_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            tools:text="Line 1\nLine 2\nLine 3" />
+            tools:text="Line 1\nLine 2\nLine 3" /-->
 
-        <android.widget.Button
-            android:id="@+id/generate_summary_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="#FF9800"
-            android:fontFamily="@font/sen_bold"
-            android:text="Generate Your Summary"
-            android:textColor="#FAFAFA"
-            android:textStyle="bold" />
-
-        <LinearLayout
+        <!--LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -81,7 +113,7 @@
                 android:layout_margin="8dp"
                 android:layout_weight="1"
                 android:text="Get User Profile" />
-        </LinearLayout>
-    </LinearLayout>
+        </LinearLayout-->
+    <!--/LinearLayout-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
