--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,17 @@
         app:layout_constraintTop_toBottomOf="@+id/spotify_login_btn"
         app:layout_constraintVertical_bias="1.0" />
 
+    <Button
+        android:id="@+id/code_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spotify_login_btn"
+        app:layout_constraintBottom_toTopOf="@id/generate_summary_btn"
+        android:text="@string/request_code" />
+
     <!--LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
