--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
     android:background="@drawable/background_lightning_bolt"
     tools:context=".MainActivity">
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/spotify_wrapped_text_view"
             android:layout_width="wrap_content"
@@ -23,52 +24,62 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/spotify_login_btn"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.488"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <android.widget.Button
+        <Button
             android:id="@+id/spotify_login_btn"
             android:layout_width="257dp"
-            android:layout_height="108dp"
-            android:layout_margin="8dp"
+            android:layout_height="116dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="112dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/rounded_button"
+            android:backgroundTint="#1A8D43"
             android:fontFamily="@font/sen_bold"
             android:padding="30dp"
             android:text="@string/log_in_to_spotify"
             android:textColor="#FAFAFA"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/generate_summary_btn"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/spotify_wrapped_text_view" />
+
         <Button
             android:id="@+id/code_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="206dp"
+            android:layout_height="47dp"
+            android:layout_marginTop="32dp"
+            android:text="@string/request_code"
+            app:layout_constraintEnd_toEndOf="@id/spotify_login_btn"
+            app:layout_constraintHorizontal_bias="0.444"
+            app:layout_constraintStart_toStartOf="@id/spotify_login_btn"
             app:layout_constraintTop_toBottomOf="@id/spotify_login_btn"
-            app:layout_constraintBottom_toTopOf="@id/generate_summary_btn"
-            android:text="@string/request_code" />
+            app:layout_constraintVertical_bias="0.164" />
 
         <TextView
             android:id="@+id/response_text_view"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/code_btn"
-            app:layout_constraintBottom_toTopOf="@id/generate_summary_btn"
-            app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@color/white"
             android:textSize="20sp"
-            tools:text="Response Text View" />
 
-        <android.widget.Button
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/generate_summary_btn"
+            tools:text=""
+            />
+
+        <Button
             android:id="@+id/generate_summary_btn"
-            android:layout_width="257dp"
-            android:layout_height="108dp"
+            android:layout_width="254dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="64dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#FF9800"
             android:fontFamily="@font/sen_bold"
@@ -76,12 +87,12 @@
             android:text="@string/generate_summary"
             android:textColor="#FAFAFA"
             android:textSize="20sp"
+
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spotify_login_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/code_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.core.widget.NestedScrollView>
