--- a/app/src/main/res/layout/fragment_full_screen_red.xml
+++ b/app/src/main/res/layout/fragment_full_screen_red.xml
@@ -5,7 +5,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".GameActivity">
+tools:context=".GameNavActivity">
 
 <TextView
     android:id="@+id/game_status_text_view"
