--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -5,10 +5,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:grid="http://schemas.android.com/tools"
     android:background="@drawable/background_lightning_bolt">
+
     <Button
         android:id="@+id/back_button"
         android:layout_width="90dp"
-        android:layout_height="46dp"
+        android:layout_height="50dp"
         android:background="@drawable/rounded_button"
         android:fontFamily="@font/sen_bold"
         android:padding="5dp"
@@ -16,71 +17,68 @@
         android:textColor="#FAFAFA"
         android:textSize="11sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/text_anchor"
+        android:layout_marginBottom="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.425" />
+        app:layout_constraintRight_toLeftOf="@+id/continue_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
-    <TextView
-        android:id="@+id/text_anchor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
+    <Button
+        android:id="@+id/continue_button"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:background="@drawable/rounded_button"
         android:fontFamily="@font/sen_bold"
-        android:text="@string/welcome"
-        android:textAlignment="center"
-        android:textColor="#FDFDFD"
-        android:textSize="45sp"
+        android:padding="5dp"
+        android:text="@string/next"
+        android:textColor="#FAFAFA"
+        android:textSize="11sp"
         android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@id/continue_button"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="100dp"
+        app:layout_constraintLeft_toRightOf="@+id/back_button"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     <TextView
-        android:id="@+id/part_one_text"
+        android:id="@+id/title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:fontFamily="@font/sen_bold"
-        android:text="@string/part_one_text"
+        android:text="@string/title_text"
         android:textAlignment="center"
         android:textColor="#FDFDFD"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/front_card"
+        app:layout_constraintBottom_toTopOf="@+id/grid_image_card"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_button"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
     <GridLayout
-        android:id="@+id/front_card"
+        android:id="@+id/grid_image_card"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_margin="75dp"
         android:background="#65FF3B"
         android:columnCount="4"
         android:rowCount="4"
-        app:layout_constraintBottom_toTopOf="@id/continue_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_button"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/cover1"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_row="0"
             android:layout_rowWeight="1"
+            android:layout_column="1"
             android:layout_columnWeight="1"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_game"/>
+            android:src="@drawable/ic_game" />
 
         <ImageView
             android:id="@+id/cover2"
@@ -89,7 +87,7 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_game"/>
+            android:src="@drawable/ic_game" />
 
         <ImageView
             android:id="@+id/cover3"
@@ -230,42 +228,27 @@
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
+
     </GridLayout>
 
     <TextView
-        android:id="@+id/back_card"
+        android:id="@+id/text_card"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_margin="75dp"
-        android:gravity="center"
+        android:layout_row="0"
+        android:layout_column="2"
         android:background="#FFEB3B"
         android:fontFamily="@font/sen_bold"
+        android:gravity="center"
+        android:lineSpacingMultiplier="1.2"
         android:text="@string/random_text"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:lineSpacingMultiplier="1.2"
-        app:layout_constraintBottom_toTopOf="@id/continue_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_button"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <Button
-        android:id="@+id/continue_button"
-        android:layout_width="90dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="124dp"
-        android:background="@drawable/rounded_button"
-        android:fontFamily="@font/sen_bold"
-        android:padding="5dp"
-        android:text="@string/game"
-        android:textColor="#FAFAFA"
-        android:textSize="11sp"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_anchor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
