--- a/app/src/main/res/layout/activity_game_nav.xml
+++ b/app/src/main/res/layout/activity_game_nav.xml
@@ -34,7 +34,7 @@
         android:id="@+id/openAlertButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Open Alert"
+        android:text="Create Game"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
