--- a/app/src/main/res/layout/activity_welcome_to_wrapped.xml
+++ b/app/src/main/res/layout/activity_welcome_to_wrapped.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/rounded_button"
         android:fontFamily="@font/sen_bold"
         android:padding="5dp"
-        android:text="@string/back"
+        android:text="Log out"
         android:textColor="#FAFAFA"
         android:textSize="11sp"
         android:textStyle="bold"
