--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -269,17 +269,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <!--WebView
+    <WebView
         android:id="@+id/word_cloud"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:background="#FFC107"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" /-->
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:id="@+id/bar_graph"
@@ -465,7 +465,7 @@
         android:background="#FFEB3B"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -484,10 +484,9 @@
 
             <ImageView
                 android:id="@+id/image1a"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
-                android:src="@drawable/ic_game" />
+                android:src="@drawable/ic_game"/>
 
             <TextView
                 android:id="@+id/text1a"
@@ -499,7 +498,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true" />
         </LinearLayout>
 
         <LinearLayout
@@ -514,9 +514,8 @@
 
             <ImageView
                 android:id="@+id/image2a"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -529,7 +528,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -544,9 +544,8 @@
 
             <ImageView
                 android:id="@+id/image3a"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -559,7 +558,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -574,9 +574,8 @@
 
             <ImageView
                 android:id="@+id/image4a"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -589,7 +588,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -604,9 +604,8 @@
 
             <ImageView
                 android:id="@+id/image5a"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -619,7 +618,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
 
@@ -653,7 +653,6 @@
                 android:id="@+id/image1b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -666,7 +665,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -683,7 +683,6 @@
                 android:id="@+id/image2b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -696,7 +695,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -713,7 +713,6 @@
                 android:id="@+id/image3b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -726,7 +725,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -743,7 +743,6 @@
                 android:id="@+id/image4b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -756,7 +755,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -773,7 +773,6 @@
                 android:id="@+id/image5b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="#4CAF50"
                 android:src="@drawable/ic_game" />
 
             <TextView
@@ -786,7 +785,8 @@
                 android:text="@string/random_text"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:singleLine="true"/>
         </LinearLayout>
 
 
