part three back

--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -492,7 +492,7 @@
                 android:id="@+id/text1a"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -522,7 +522,7 @@
                 android:id="@+id/text2a"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -552,7 +552,7 @@
                 android:id="@+id/text3a"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -582,7 +582,7 @@
                 android:id="@+id/text4a"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -612,7 +612,7 @@
                 android:id="@+id/text5a"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -651,7 +651,7 @@
 
             <ImageView
                 android:id="@+id/image1b"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_game" />
 
@@ -659,7 +659,7 @@
                 android:id="@+id/text1b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -681,7 +681,7 @@
 
             <ImageView
                 android:id="@+id/image2b"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_game" />
 
@@ -689,7 +689,7 @@
                 android:id="@+id/text2b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -711,7 +711,7 @@
 
             <ImageView
                 android:id="@+id/image3b"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_game" />
 
@@ -719,7 +719,7 @@
                 android:id="@+id/text3b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -741,7 +741,7 @@
 
             <ImageView
                 android:id="@+id/image4b"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_game" />
 
@@ -749,7 +749,7 @@
                 android:id="@+id/text4b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
@@ -771,7 +771,7 @@
 
             <ImageView
                 android:id="@+id/image5b"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_game" />
 
@@ -779,7 +779,7 @@
                 android:id="@+id/text5b"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="60dp"
+                android:layout_marginHorizontal="30dp"
                 android:fontFamily="@font/sen_bold"
                 android:gravity="center"
                 android:text="@string/random_text"
