--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -315,7 +315,7 @@
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
-            <TextView
+            <!--TextView
                 android:id="@+id/percent1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -325,7 +325,7 @@
                 android:text="@string/random_number"
                 android:textColor="#000000"
                 android:textSize="16sp"
-                android:textStyle="italic" />
+                android:textStyle="italic"/-->
         </LinearLayout>
 
         <LinearLayout
@@ -347,7 +347,7 @@
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
-            <TextView
+            <!--TextView
                 android:id="@+id/percent2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -357,7 +357,7 @@
                 android:text="@string/random_number"
                 android:textColor="#000000"
                 android:textSize="16sp"
-                android:textStyle="italic" />
+                android:textStyle="italic" /-->
         </LinearLayout>
 
         <LinearLayout
@@ -379,7 +379,7 @@
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
-            <TextView
+            <!--TextView
                 android:id="@+id/percent3"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -389,7 +389,7 @@
                 android:text="@string/random_number"
                 android:textColor="#000000"
                 android:textSize="16sp"
-                android:textStyle="italic" />
+                android:textStyle="italic" /-->
         </LinearLayout>
 
         <LinearLayout
@@ -411,7 +411,7 @@
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
-            <TextView
+            <!--TextView
                 android:id="@+id/percent4"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -421,7 +421,7 @@
                 android:text="@string/random_number"
                 android:textColor="#000000"
                 android:textSize="16sp"
-                android:textStyle="italic" />
+                android:textStyle="italic" /-->
         </LinearLayout>
 
         <LinearLayout
@@ -442,18 +442,6 @@
                 android:text="@string/random_text"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/percent5"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:gravity="center_vertical|start"
-                android:fontFamily="@font/sen_bold"
-                android:text="@string/random_number"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:textStyle="italic" />
         </LinearLayout>
 
     </LinearLayout>
@@ -465,7 +453,7 @@
         android:background="#FFEB3B"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
