--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -299,21 +299,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <LinearLayout
+    <TextView
         android:id="@+id/word_cloud"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:background="#00FFFF"
         android:visibility="invisible"
         app:fontFamily="@font/sen_bold"
+        android:gravity="center"
+        android:fontFamily="@font/sen_bold"
+        android:text="@string/random_text"
+        android:textColor="#000000"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical">
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:id="@+id/bar_graph"
